@@ -1,0 +1,51 @@
+## automake.am
+##
+## icons/automake.am for GlassMonitor
+##
+## (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+##
+##   This program is free software; you can redistribute it and/or modify
+##   it under the terms of the GNU General Public License version 2 as
+##   published by the Free Software Foundation.
+##
+##   This program is distributed in the hope that it will be useful,
+##   but WITHOUT ANY WARRANTY; without even the implied warranty of
+##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##   GNU General Public License for more details.
+##
+##   You should have received a copy of the GNU General Public
+##   License along with this program; if not, write to the Free Software
+##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+##
+##
+## Use automake to process this into a Makefile.in
+
+install-exec-am:	
+	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps
+	cp glassmonitor-16x16.png $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/glassmonitor.png
+	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps
+	cp glassmonitor-22x22.png $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/glassmonitor.png
+	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps
+	cp glassmonitor-32x32.png $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/glassmonitor.png
+	mkdir -p $(DESTDIR)@prefix@/share/icons/hicolor/48x48/apps
+	cp glassmonitor-48x48.png $(DESTDIR)@prefix@/share/icons/hicolor/48x48/apps/glassmonitor.png
+
+
+uninstall-local:	
+	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/16x16/apps/glassmonitor.png
+	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/22x22/apps/glassmonitor.png
+	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/32x32/apps/glassmonitor.png
+	rm -f $(DESTDIR)@prefix@/share/icons/hicolor/48x48/apps/glassmonitor.png
+
+EXTRA_DIST = glassmonitor-16x16.png\
+             glassmonitor-16x16.xpm\
+             glassmonitor-22x22.png\
+             glassmonitor-32x32.png\
+             glassmonitor-48x48.png
+
+CLEANFILES = *~
+
+MAINTAINERCLEANFILES = *~\
+                       aclocal.m4\
+                       configure\
+                       Makefile.in
