@@ -1,0 +1,160 @@
+/* XPM */
+static char * glassplayer_16x16_xpm[] = {
+"16 16 141 2",
+"  	c None",
+". 	c #CE5C00",
+"+ 	c #CF5C00",
+"@ 	c #2F3536",
+"# 	c #313738",
+"$ 	c #303638",
+"% 	c #C95B02",
+"& 	c #F79E49",
+"* 	c #F8A454",
+"= 	c #F8A554",
+"- 	c #F7A24E",
+"; 	c #2F3537",
+"> 	c #303537",
+", 	c #4D5151",
+"' 	c #6B6D6B",
+") 	c #787A78",
+"! 	c #CF5D00",
+"~ 	c #3A4041",
+"{ 	c #747674",
+"] 	c #797B78",
+"^ 	c #656763",
+"/ 	c #5D5F5B",
+"( 	c #34393B",
+"_ 	c #787B78",
+": 	c #696B67",
+"< 	c #555753",
+"[ 	c #7B5939",
+"} 	c #BF5C0C",
+"| 	c #F79637",
+"1 	c #CC5C01",
+"2 	c #5A5C58",
+"3 	c #8A6748",
+"4 	c #C46211",
+"5 	c #F7922F",
+"6 	c #616463",
+"7 	c #717370",
+"8 	c #595852",
+"9 	c #C85D06",
+"0 	c #E37A1D",
+"a 	c #F39A46",
+"b 	c #F48419",
+"c 	c #CC5D03",
+"d 	c #706D65",
+"e 	c #C85E06",
+"f 	c #E27819",
+"g 	c #F3861D",
+"h 	c #303637",
+"i 	c #787A77",
+"j 	c #60625E",
+"k 	c #595B56",
+"l 	c #636561",
+"m 	c #8C6949",
+"n 	c #C46110",
+"o 	c #CD5D02",
+"p 	c #C66412",
+"q 	c #977657",
+"r 	c #7D7F7A",
+"s 	c #927151",
+"t 	c #C46210",
+"u 	c #C55B04",
+"v 	c #7D7F7D",
+"w 	c #5B5D59",
+"x 	c #626460",
+"y 	c #6C6E6A",
+"z 	c #545857",
+"A 	c #474C4C",
+"B 	c #343A3B",
+"C 	c #4C5151",
+"D 	c #707473",
+"E 	c #A0A29E",
+"F 	c #898C86",
+"G 	c #81837E",
+"H 	c #8F908E",
+"I 	c #313638",
+"J 	c #696C6B",
+"K 	c #6A6C68",
+"L 	c #696B66",
+"M 	c #4B4F4F",
+"N 	c #5D6261",
+"O 	c #B3B6B4",
+"P 	c #BDBEBC",
+"Q 	c #848684",
+"R 	c #636766",
+"S 	c #A5A8A3",
+"T 	c #92948F",
+"U 	c #7D807F",
+"V 	c #313739",
+"W 	c #444A4A",
+"X 	c #7F807E",
+"Y 	c #6C6E69",
+"Z 	c #3E4344",
+"` 	c #6F7372",
+" .	c #D1D2D1",
+"..	c #B8B9B6",
+"+.	c #888B88",
+"@.	c #515554",
+"#.	c #4B5050",
+"$.	c #B1B3AF",
+"%.	c #A1A3A0",
+"&.	c #626767",
+"*.	c #525758",
+"=.	c #828481",
+"-.	c #797C79",
+";.	c #525656",
+">.	c #414848",
+",.	c #444949",
+"'.	c #636767",
+").	c #B6B8B4",
+"!.	c #A9ABA9",
+"~.	c #8A8E8F",
+"{.	c #323739",
+"].	c #474C4D",
+"^.	c #717474",
+"/.	c #828583",
+"(.	c #919490",
+"_.	c #A5A7A3",
+":.	c #A6A9A6",
+"<.	c #9B9E9C",
+"[.	c #9A9D9D",
+"}.	c #7A7D7E",
+"|.	c #353A3C",
+"1.	c #373C3D",
+"2.	c #464C4C",
+"3.	c #505556",
+"4.	c #5B6062",
+"5.	c #66696A",
+"6.	c #6E7272",
+"7.	c #464B4C",
+"8.	c #33393A",
+"9.	c #626666",
+"0.	c #5C6161",
+"a.	c #3A3F40",
+"b.	c #515656",
+"c.	c #606564",
+"d.	c #32383A",
+"e.	c #343A3C",
+"f.	c #8E918F",
+"g.	c #ACADAC",
+"h.	c #AAABA8",
+"i.	c #949693",
+"j.	c #727574",
+"                . . . . . . + . ",
+"        @ # $ % & * = = = = - . ",
+"    ; > , ' ) . = ! + ! . . = . ",
+"  ; ~ { ] ^ / . = . ] { ~ . = . ",
+"  ( _ : < [ } ! | 1 2 3 4 + 5 . ",
+"$ 6 7 < 8 9 0 a b c d e f a g ! ",
+"h i j k l m n o p q r s t o u   ",
+"h v w x y z A B C D E F G H I   ",
+"$ J K L M N O P Q A R S T U V   ",
+"; W X Y Z `  ...+.@.#.$.%.&.;   ",
+"  > *.=.-.;.>.V ,.'.).!.~.{.    ",
+"    > ].^./.(._.:.<.[.}.|.      ",
+"      $ 1.2.3.4.5.6.7.$         ",
+"      8.9.0.Z $ a.b.c.d.        ",
+"        e.f.g.h.i.j.B           ",
+"          $ |.$ e.$             "};
