@@ -14,3 +14,5 @@
 	* Added an e-mail alert subsystem.
 2016-05-02 Fred Gleason <fredg@paravelsystems.com>
 	* Added a 'make rpm' target.
+2016-05-02 Fred Gleason <fredg@paravelsystems.com>
+	* Added icons in 'icons/'.
